update node and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nicolawealth/resolved_promise",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.umd.js",
   "unpkg": "./dist/index.umd.js",
@@ -43,7 +43,7 @@
     "doc": "npx typedoc src/*.ts src/**/*.ts --out dist/doc"
   },
   "engines": {
-    "node": "^22"
+    "node": ">=22"
   },
   "dependencies": {
   },
